[package]
name = "squaredb_fm"
version = "1.0.0-beta"
edition = "2021"
description = "Squaredb - Enhance your DB with extendability and performance."
categories = ["squaredb", "db", "fm"]
authors = ["@square-db"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/square-db/squaredb-fm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


[dependencies]
futures = "0.3.30"
magic-crypt = "3.1.13"
rayon = "1.8.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.36.0", features=["full"] }
elapsed-time = "0.1"
